index.css
* {
	font-family: "Roboto", serif;
	color: black;
}
body {
	display: flex;
	justify-content: center;
	flex-direction: column;
	margin: auto;
	background-color: rgb(66, 69, 73);
}
.container {
	background-color: rgb(66, 69, 73);
	display: flex;
	flex-direction: row;
}
.form {
	display: flex;
	flex-direction: column;
	margin-left: 10vh;
	margin-top: 5vh;
}

.date,
.membrePresent,
.grade,
.departement,
.OtherDist,
.catRepa,
.materiel,
.finReparation {
	display: flex;
	flex-direction: row;
	align-items: center;
	height: 5vh;
}
.dateInput,
.membrePresentInput,
.gradeInput,
.departementinput,
.otherDistInput,
.catRepaInput,
.materielInput,
.finReparationInput {
	padding: 2vh;
}

.dateInput input,
.membrePresentInput input,
.gradeInput input,
.departementinput input,
.otherDistInput input,
.materielInput input,
.finReparationInput input {
	border: none;
	border-bottom: 2px solid rgb(30, 33, 36);
	height: 3vh;
	width: 20vh;
	display: flex;
	justify-content: center;
	align-items: center;
}

.name {
	border: 1px solid black;
	background-color: rgb(126, 126, 126);
	border-radius: 16px;
	min-width: 10vh;
	max-width: 100%;
	padding: 1vh;
	margin: 1vh;
	display: flex;
	justify-content: center;
	flex-direction: row;
}
.name p {
	color: white;
}
.OtherNamePicker,
.othermaterielPicker {
	display: flex;
	justify-content: flex-start;
	flex-wrap: wrap;
}
.Erasebutton {
	margin-left: 2vh;
	border: none;
	background-color: white;
	font-size: 20px;
	padding: 0;
	border: 1px solid rgb(126, 126, 126);
	border-radius: 50%;
	width: 2.5em;
	height: 2.5em;
	display: flex;
	justify-content: center;
	align-items: center;
	cursor: pointer;
	transition: 0.2s;
	box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
}

.Erasebutton:hover {
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.interventionInput textarea {
	resize: none;
	overflow: hidden;
	font-size: 15px;
	margin-left: 10vh;
	margin-top: 2vh;
	min-height: 100px;
	width: 70vh;
}
.buttonExport {
	display: flex;
	justify-content: center;
	align-items: center;
}

.buttonExport button {
	font-size: 20px;
	border: 2px solid rgb(30, 33, 36);
	background-color: rgb(66, 69, 73);
	color: white;
	padding: 1vh;
	border-radius: 16px;
	cursor: pointer;
	transition: 0.2s;
}

.buttonExport button:hover {
	background-color: rgb(114, 137, 218);
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.catRepaInput {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	gap: 10px;
}

.catRepaInput label {
	margin-right: 5px;
	display: inline-block;
	display: flex;
	align-items: center;
	gap: 5px;
	white-space: nowrap;
}

.rang {
	margin: 0;
}

input[type="checkbox"] {
	display: none;
}

.custom-checkbox {
	width: 16px;
	height: 16px;
	border: 2px solid #000;
	display: inline-block;
	position: relative;
	margin-right: 5px;
}

input[type="checkbox"]:checked + .custom-checkbox::after {
	content: "";
	position: absolute;
	top: 2px;
	left: 5px;
	width: 5px;
	height: 10px;
	border: solid #000;
	border-width: 0 2px 2px 0;
	transform: rotate(45deg);
}

/* Style global pour tous les éléments <select> */
select {
	font-family: "Roboto", sans-serif; /* Police Roboto */
	padding: 10px 20px; /* Espacement à l'intérieur des menus déroulants */
	font-size: 16px; /* Taille de police */
	border-radius: 5px; /* Bords arrondis */
	border: 1px solid #ccc; /* Bordure grise */
	background-color: #f9f9f9; /* Fond clair */
	transition: border-color 0.3s ease, background-color 0.3s ease; /* Transition pour une interaction plus fluide */
	width: 100%; /* S'adapte à la largeur de son conteneur */
}

/* Effet au survol ou à la sélection */
select:hover,
select:focus {
	border-color: #666; /* Bordure plus sombre quand l'élément est survolé ou sélectionné */
	background-color: #fff; /* Changer la couleur de fond lorsque l'élément est actif */
}

/* Pour les groupes d'options */
optgroup {
	font-weight: bold; /* Appliquer un gras pour les groupes d'options */
	/* Couleur du texte des groupes */
}

/* Option sélectionnée */
option:checked {
	background-color: #007bff; /* Fond bleu pour l'option sélectionnée */
	/* Texte blanc pour l'option sélectionnée */
}
textarea {
	width: 100%;
	height: 150px;
	border: 1px solid #ccc;
	padding: 10px;
	font-size: 16px;
	box-sizing: border-box; /* pour inclure le padding dans la largeur et la hauteur */
	resize: vertical; /* Permet à l'utilisateur de redimensionner la hauteur */
	background-color: #f9f9f9;
	white-space: pre-line;
}

.gradeTexte,
.dateTexte,
.membrePresentTexte,
.departementTexte,
.otherDistText,
.catRepaText,
.interventionText,
.materieltext,
.finReparationText,
label {
	color: white;
}

